Translation binary file(blender.mo) for Japanese is too small #45154

Closed
opened 2015-06-23 03:50:14 +02:00 by Satoshi Yamasaki · 14 comments

System Information
WIndows 8.1Pro x64, Intel HD2000

Blender Version
Broken: 2.75RC2(Win x64, x32, zipped),
Worked: 2.75RC1(Win x64, zipped)

Short description of error
blender.mo for Japanese is too small, so many strings are missing.

For example, latest blender.mo for Japanese is 2,010,949 bytes (https://developer.blender.org/diffusion/BTS/browse/trunk/locale/ja/LC_MESSAGES/blender.mo;3633),
and latest ja.mo file is 2,019,950 bytes (https://developer.blender.org/diffusion/BTS/browse/branches/ja/ja.mo).
but the blender.mo in RC2 is just 601,479 bytes...It's too small !

Also in the same binary, blender.mo in zh_TW directory is just 10KB...What's happened ?
I didn't verify blender.mo files for all languages and binaries...So please check them too.

Thanks,

**System Information** WIndows 8.1Pro x64, Intel HD2000 **Blender Version** Broken: 2.75RC2(Win x64, x32, zipped), Worked: 2.75RC1(Win x64, zipped) **Short description of error** blender.mo for Japanese is too small, so many strings are missing. For example, latest blender.mo for Japanese is 2,010,949 bytes (https://developer.blender.org/diffusion/BTS/browse/trunk/locale/ja/LC_MESSAGES/blender.mo;3633), and latest ja.mo file is 2,019,950 bytes (https://developer.blender.org/diffusion/BTS/browse/branches/ja/ja.mo). but the blender.mo in RC2 is just 601,479 bytes...It's too small ! Also in the same binary, blender.mo in zh_TW directory is just 10KB...What's happened ? I didn't verify blender.mo files for all languages and binaries...So please check them too. Thanks,
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Satoshi Yamasaki 2015-06-23 03:50:14 +02:00
Author
Member

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki

#45188 was marked as duplicate of this issue

#45188 was marked as duplicate of this issue
Member

Added subscriber: @blend-it

Added subscriber: @blend-it
Member

same for it.mo on RC2 :-(
a lot of translated strings are missing, and the file is about 1/10 of normal.
Perhaps related to https://developer.blender.org/T42765#315205 ?

same for it.mo on RC2 :-( a lot of translated strings are missing, and the file is about 1/10 of normal. Perhaps related to https://developer.blender.org/T42765#315205 ?

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey I would suspect that RC2 were built with latest commit from git translation repo, instead of using same revision as RC1 as expected?

@Sergey I would suspect that RC2 were built with latest commit from git translation repo, instead of using same revision as RC1 as expected?
Member

Added subscribers: @JulianEisel, @ChauHo

Added subscribers: @JulianEisel, @ChauHo
Bastien Montagne removed their assignment 2015-06-25 15:05:30 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2015-06-25 15:05:30 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

@Sergey reassigning to you - this is not really a bug, more like a building issue, but we should understand it fully and do the right thing for final release!

@Sergey reassigning to you - this is not really a bug, more like a building issue, but we should understand it fully and do the right thing for final release!

This issue was referenced by 6654ec7de7

This issue was referenced by 6654ec7de74ac775abd2d848aa4a6c64d990c69f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by ff224a61a5

This issue was referenced by ff224a61a54f8aae56bc468689e2b51904e3eb79
Author
Member

Thank you for fixing! :)

Thank you for fixing! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45154
No description provided.